--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - dev
 
+permissions:
+  contents: read
+  actions: read
+  security-events: write
+
 jobs:
   lint:
     uses: ./.github/workflows/lint.yml
