--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.64.1_Linux-64bit.deb
-          sudo dpkg -i trivy_0.64.1_Linux-64bit.deb
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.68.2/trivy_0.68.2_Linux-64bit.deb
+          sudo dpkg -i trivy_0.68.2_Linux-64bit.deb
 
       - name: Download Docker image artifact
         uses: actions/download-artifact@v4
